--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@ canvas {
   <div class="box" >
     <canvas id="pinkboard"></canvas>
   </div>
-  <div id="text">I love u</div>
+  <div id="text">Quá là dễ thương</div>
   <img class="img-em" src="em2.jpg">
   <img class="img-anh" src="anh.jpg">
   <div class="on" onClick=handleClick()>Bật</div>
   <div class="off" onClick=handleClickOff()>Tắt</div>
   <div class="cheMat" onClick=handleClickOffImage()>Che Mặt</div>
   <div class="khongChe" onClick=handleClickOnImage()>Không Che</div>
-  <div class="love" onClick=handleLove()>Yêu</div>
-  <div class="noLove" onClick=handleNoLove()>Không Yêu</div>
+  <div class="love" onClick=handleLove()>Dễ Thương</div>
+  <div class="noLove" onClick=handleNoLove()>Xinh xắn</div>
   
   <script src="index.js"></script>
 <script>
